// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Phone verification Transformer Tests should add correct UI elements to schema when multiple methodType choices exists and sms is the first methodType choice 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "noMargin": true,
        "options": Object {
          "content": "oie.phone.verify.sms.sendText.without.phone",
        },
        "type": "Description",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      Object {
        "label": "oie.phone.sms.primaryButton",
        "options": Object {
          "actionParams": Object {
            "authenticator.methodType": "sms",
          },
          "step": "authenticator-verification-data",
          "type": "submit",
        },
        "type": "Button",
      },
      Object {
        "label": "oie.phone.call.secondaryButton",
        "options": Object {
          "actionParams": Object {
            "authenticator.methodType": "voice",
          },
          "step": "authenticator-verification-data",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Phone verification Transformer Tests should add correct UI elements to schema when multiple methodType choices exists and voice is the first methodType choice 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "noMargin": true,
        "options": Object {
          "content": "oie.phone.verify.call.sendText.without.phone",
        },
        "type": "Description",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      Object {
        "label": "oie.phone.call.primaryButton",
        "options": Object {
          "actionParams": Object {
            "authenticator.methodType": "voice",
          },
          "step": "authenticator-verification-data",
          "type": "submit",
        },
        "type": "Button",
      },
      Object {
        "label": "oie.phone.sms.secondaryButton",
        "options": Object {
          "actionParams": Object {
            "authenticator.methodType": "sms",
          },
          "step": "authenticator-verification-data",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Phone verification Transformer Tests should add correct UI elements to schema when only sms methodType choice exists 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "noMargin": true,
        "options": Object {
          "content": "oie.phone.verify.sms.sendText.without.phone",
        },
        "type": "Description",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      Object {
        "label": "oie.phone.sms.primaryButton",
        "options": Object {
          "actionParams": Object {
            "authenticator.methodType": "sms",
          },
          "step": "authenticator-verification-data",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Phone verification Transformer Tests should add correct UI elements to schema when only sms methodType choice exists and redacted phoneNumber and nickname exists in Idx response  1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "noMargin": true,
        "options": Object {
          "content": "oie.phone.verify.sms.sendText.with.phone.with.nickname",
        },
        "type": "Description",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      Object {
        "label": "oie.phone.sms.primaryButton",
        "options": Object {
          "actionParams": Object {
            "authenticator.methodType": "sms",
          },
          "step": "authenticator-verification-data",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Phone verification Transformer Tests should add correct UI elements to schema when only sms methodType choice exists and redacted phoneNumber exists in Idx response  1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "noMargin": true,
        "options": Object {
          "content": "oie.phone.verify.sms.sendText.with.phone.without.nickname",
        },
        "type": "Description",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      Object {
        "label": "oie.phone.sms.primaryButton",
        "options": Object {
          "actionParams": Object {
            "authenticator.methodType": "sms",
          },
          "step": "authenticator-verification-data",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Phone verification Transformer Tests should add correct UI elements to schema when only voice methodType choice exists 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "noMargin": true,
        "options": Object {
          "content": "oie.phone.verify.call.sendText.without.phone",
        },
        "type": "Description",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      Object {
        "label": "oie.phone.call.primaryButton",
        "options": Object {
          "actionParams": Object {
            "authenticator.methodType": "voice",
          },
          "step": "authenticator-verification-data",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Phone verification Transformer Tests should add correct UI elements to schema when only voice methodType choice exists and redacted phoneNumber and nickname exists in Idx response  1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "noMargin": true,
        "options": Object {
          "content": "oie.phone.verify.call.sendText.with.phone.with.nickname",
        },
        "type": "Description",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      Object {
        "label": "oie.phone.call.primaryButton",
        "options": Object {
          "actionParams": Object {
            "authenticator.methodType": "voice",
          },
          "step": "authenticator-verification-data",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Phone verification Transformer Tests should add correct UI elements to schema when only voice methodType choice exists and redacted phoneNumber exists in Idx response  1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "noMargin": true,
        "options": Object {
          "content": "oie.phone.verify.call.sendText.with.phone.without.nickname",
        },
        "type": "Description",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      Object {
        "label": "oie.phone.call.primaryButton",
        "options": Object {
          "actionParams": Object {
            "authenticator.methodType": "voice",
          },
          "step": "authenticator-verification-data",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
